Bug 968113 - Homescreen loading circle is not centered on the icon

--- a/apps/homescreen/style/grid.css
+++ b/apps/homescreen/style/grid.css
@@ -137,6 +137,10 @@ ol > li.active > div > img {
   animation: rotate 2.25s linear infinite;
 }
 
+.apps .loading:after {
+  margin-top: 0.4rem;
+}
+
 /* the panels are panning */
 body[data-transitioning] .loading:after {
   animation-name: none;
